fix(compat-table): avoid overflow on horizontal scroll (#1432)

--- a/components/compat-table/index-desktop.css
+++ b/components/compat-table/index-desktop.css
@@ -81,19 +81,8 @@
     }
   }
 
-  /* TODO: removed to stop overflowing
-  .table-container {
-    width: 100vw;
-    margin: 0 -3rem;
-    overflow: auto;
-  } */
-
   .table-container-inner {
     position: relative;
-
-    /* TODO: removed to stop overflowing
-    min-width: max-content;
-    padding: 0 3rem; */
 
     &::after {
       position: absolute;
